force-app/main/default/objects/Sponsorship__c/Sponsorship__c.object-meta.xml
<CustomObject>
    <description>Event sponsorships; advertisements, food/drink merchants etc.</description>
    <label>Sponsorship</label>
    <nameField>
        <label>Sponsorship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsorships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>